--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "movingimage/vmpro-api-client": "dev-master"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^1.12"
+        "friendsofphp/php-cs-fixer": "^1.12",
+        "phpunit/phpunit": "^4.5 || ^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,5 +28,10 @@
         "exclude-from-classmap": [
             "/Tests/"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MovingImage\\Bundle\\VMProApiBundle\\Tests\\": "Tests/"
+        }
     }
 }
