--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
 install:
   - composer install
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
-  - if [ "$GUZZLE_VERSION" != "" ]; then composer require "symfony/symfony:${GUZZLE_VERSION}" --no-update; fi;
+  - if [ "$GUZZLE_VERSION" != "" ]; then composer require "guzzlehttp/guzzle:${GUZZLE_VERSION}" --no-update; fi;
   - if [ "$GUZZLE_VERSION" != "" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;
 
 script:
