--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": "^5.5 || ^7.0",
         "symfony/framework-bundle": "^2.7 || ^3.0",
         "guzzlehttp/guzzle": "^5.0 || ^6.0",
-        "movingimage/vmpro-api-client": "^0.3.0"
+        "movingimage/vmpro-api-client": "dev-master"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.12",
