--- a/Resources/config/services/guzzle5.yml
+++ b/Resources/config/services/guzzle5.yml
@@ -13,7 +13,7 @@ services:
     # authentication subscribers attached
     vmpro_api.unauthenticated_guzzle_client:
         class: GuzzleHttp\Client
-        arguments: [base_url: %vm_pro_api_base_url%]
+        arguments: [base_url: "%vm_pro_api_base_url%"]
 
     # Re-usable Guzzle 5 HTTP client instance with
     # all appropriate authentication subscribers attached
@@ -21,5 +21,5 @@ services:
         class: GuzzleHttp\Client
         factory: ["@vmpro_api.api_client_factory", createHttpClient]
         arguments:
-            - %vm_pro_api_base_url%
+            - "%vm_pro_api_base_url%"
             - ["@vmpro_api.token_subscriber"]
