--- a/Resources/config/services/guzzle6.yml
+++ b/Resources/config/services/guzzle6.yml
@@ -13,7 +13,7 @@ services:
     # authentication handlers attached
     vmpro_api.unauthenticated_guzzle_client:
         class: GuzzleHttp\Client
-        arguments: [base_uri: %vm_pro_api_base_url%]
+        arguments: [base_uri: "%vm_pro_api_base_url%"]
 
     # Re-usable Guzzle 6 HTTP client instance with
     # all appropriate authentication handlers attached
@@ -21,5 +21,5 @@ services:
         class: GuzzleHttp\Client
         factory: ["@vmpro_api.api_client_factory", createHttpClient]
         arguments:
-            - %vm_pro_api_base_url%
+            - "%vm_pro_api_base_url%"
             - ["@vmpro_api.token_middleware"]
