Rather than define interface as a class, be specific about the concrete class for Symfony 3.3-style autowiring

--- a/Resources/config/services/guzzle5.yml
+++ b/Resources/config/services/guzzle5.yml
@@ -23,3 +23,12 @@ services:
         arguments:
             - "%vm_pro_api_base_url%"
             - ["@vmpro_api.token_subscriber"]
+
+    # Video Manager Pro API client - dynamically instantiated
+    # depending on which GuzzleHttp library is present in the project
+    vmpro_api.client:
+        class: MovingImage\Client\VMPro\ApiClient\Guzzle5ApiClient
+        factory: ["@vmpro_api.api_client_factory", create]
+        arguments:
+            - "@vmpro_api.authenticated_guzzle_client"
+            - "@vmpro_api.serializer"
