--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.12",
-        "phpunit/phpunit": "^4.5 || ^5.0"
+        "phpunit/phpunit": "^4.5 || ^5.0",
+        "symfony/cache": "~3.1"
     },
     "autoload": {
         "psr-4": {
