--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "ruben.knol@movingimage.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": "^5.5 || ^7.0",
