--- a/Resources/config/services/guzzle5.yml
+++ b/Resources/config/services/guzzle5.yml
@@ -32,3 +32,7 @@ services:
         arguments:
             - "@vmpro_api.authenticated_guzzle_client"
             - "@vmpro_api.serializer"
+            - null
+            - null
+            - null
+            - "@vmpro_api.stopwatch"
