--- a/Resources/config/services/main.yml
+++ b/Resources/config/services/main.yml
@@ -24,6 +24,10 @@ services:
             - "@vmpro_api.credentials"
             - "@vmpro_api.token_extractor"
 
+    # Stopwatch for measuring response times of API calls
+    vmpro_api.stopwatch:
+        class: MovingImage\Bundle\VMProApiBundle\Service\Stopwatch
+
     # Event listener that will bypass cache for requests that have the pre-defined request argument
     # The name of this request argument is configured using `cache_bypass_argument` option
     vmpro_api.bypass_cache_listener:
@@ -31,5 +35,13 @@ services:
         arguments:
             - '@vmpro_api.client'
             - '%vm_pro_api_cache_bypass_argument%'
+        tags:
+            - { name: kernel.event_subscriber }
+
+    # Response listener that adds headers with durations of API calls
+    vmpro_api.stopwatch_listener:
+        class: MovingImage\Bundle\VMProApiBundle\EventListener\StopwatchListener
+        arguments:
+            - '@vmpro_api.stopwatch'
         tags:
             - { name: kernel.event_subscriber }
