--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/framework-bundle": "^2.7 || ^3.0",
         "guzzlehttp/guzzle": "^5.0 || ^6.0",
         "movingimage/vmpro-api-client": "dev-master",
-        "psr/cache": "^1.0"
+        "psr/cache": "^1.0",
+        "symfony/stopwatch": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.12",
