--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "guzzlehttp/guzzle": "^5.0 || ^6.0",
         "movingimage/vmpro-api-client": "dev-master",
         "psr/cache": "^1.0",
-        "symfony/stopwatch": "^3.0"
+        "symfony/stopwatch": "^2.7 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.12",
